fix aboutme spacing on mobile

--- a/packages/scss/src/atoms/XpContent.scss
+++ b/packages/scss/src/atoms/XpContent.scss
@@ -9,5 +9,9 @@
   @include font-size();
 
   @include phone() {
+    margin: 0 map-get($spacing, "xs");
+  }
+  @include tablet() {
+    margin: 0;
   }
 }
